--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="bg-black">
-        <h1 class="heading1">DOM Learning on Chai Aur Code</h1>
+        <h1  id="title" class="heading1">DOM Learning on Chai Aur Code</h1>
         <p>Lorem ipsum dolor sit amet.</p>
     </div>
 </body>
