--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     
     <title>DOM Learning</title>
+    <style>
+        .bg-black
+        {
+            background-color: #212121;
+            color: #fff;
+        }
+    </style>
 </head>
-<body>
-    <div class="bg-black">
+<body class="bg-black">
+    <div >
         <h1  id="title" class="heading1">DOM Learning on Chai Aur Code</h1>
         <p>Lorem ipsum dolor sit amet.</p>
     </div>
 </body>
 </html>
+
+
+
