--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -15,7 +15,18 @@
 <body class="bg-black">
     <div >
         <h1  id="title" class="heading1">DOM Learning on Chai Aur Code</h1>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
         <p>Lorem ipsum dolor sit amet.</p>
+
+
+        <ul>
+            <li class="list-item">one</li>
+            <li class="list-item">two</li>
+            <li class="list-item">three</li>
+            <li class="list-item">four</li>
+        </ul>
     </div>
 </body>
 </html>
